# Backtesting

./: .gitignore  README.md
01-six-cycle-etf-rotation/: .env.example  README.md  REPORT.md  REPORT_CHINA.md  REPORT_US.md  pyproject.toml  requirements.txt
01-six-cycle-etf-rotation/configs/: china.yaml  default.yaml
01-six-cycle-etf-rotation/outputs/run1/: REPORT.md  metrics.csv  metrics.md  regime_timeline.csv  run_config.json  signals_monthly.csv  signals_transformed.csv  stage_weights.csv  turnover.csv  weights_ew.csv  weights_s1_style.csv  weights_s2_allweather.csv  weights_s3_rotation.csv  weights_s4_targetvol.csv  weights_spy.csv
01-six-cycle-etf-rotation/scripts/: convert_lseg_xlsx.py  fetch_china_macro.py  make_offline_data.py
01-six-cycle-etf-rotation/sixcycle/: __init__.py  __main__.py  backtest.py  calendar.py  classifier.py  cli.py  config.py  data.py  dotenv.py  metrics.py  plotting.py  report.py  riskparity.py  runner.py  universe.py
01-six-cycle-etf-rotation/sixcycle/datasources/: __init__.py  _http.py  base.py  cache.py  csv_source.py  fred_source.py  stooq_source.py  tiingo_source.py
01-six-cycle-etf-rotation/sixcycle/strategy/: __init__.py  all_weather.py  base.py  benchmarks.py  rotation.py  style_rotation.py  target_vol.py
01-six-cycle-etf-rotation/tests/: test_backtest.py  test_classifier.py  test_classifier_china.py  test_pit.py  test_riskparity.py
_template/: README.md
