[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sixcycle"
version = "0.1.0"
description = "US-market analog backtester for the Guosheng Six-Cycle multi-asset ETF rotation framework"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
data = ["tiingo>=0.14", "fredapi>=0.5", "pandas-datareader>=0.10"]

[project.scripts]
sixcycle = "sixcycle.cli:main"

[tool.setuptools.packages.find]
include = ["sixcycle*"]
